[project]
name = "fastmqtt"
version = "0.1.0"
description = "Pure asyncio MQTT 3.1.1/5.0 client library"
readme = "README.md"
authors = [
    { name = "borisalekseev", email = "i.borisalekseev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    {include-group = "docs"},
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "broker: requires a live MQTT broker (run with --broker or docker compose up artemis)",
]
